--- a/style.css
+++ b/style.css
@@ -52,7 +52,9 @@ a:hover {
   color: black;
 }
 
-
+.bigger-img{
+  width: 200px;
+}
 
 .container {
   margin: 0px auto;
@@ -84,6 +86,9 @@ a:hover {
   box-shadow: 2px 2px 30px rgba(0,0,0,0.4)
 }
 
+.zoom-hover:hover{
+  transition: transform .2s;
+}
 
 .list-inline > li {
   display: inline-block;
